# app/serializers/lesson_part_serializer.rb
@@ -1,0 +1,9 @@
+class LessonPartSerializer
+  include SimpleAMS::DSL
+
+  adapter SimpleAMS::Adapters::AMS, root: false
+
+  fields :id, :position
+
+  belongs_to :lesson, serializer: LessonSerializer
+end
